--- a/test/data/TestWorkflow.config
+++ b/test/data/TestWorkflow.config
@@ -1,29 +1,33 @@
+task TaskStart:
+    class : redbreast.core.spec.StartTask
+end
+
 task TaskA:
-    '''
-    desc TaskA
-    '''
+    class : redbreast.core.spec.ChoiceTask
+end
+
+task TaskB:
     class : redbreast.core.spec.SimpleTask
 end
 
-task TaskB(TaskA):
+task TaskC(TaskB):
 end
 
-task TaskC(TaskA):
+task TaskD(TaskB):
 end
 
-task TaskD(TaskA):
+task TaskE(TaskB):
 end
 
-task TaskE(TaskA):
+task TaskF(TaskB):
 end
 
-task TaskF(TaskA):
+task TaskG:
+    class : redbreast.core.spec.JoinTask
 end
 
-task TaskG(TaskA):
-end
-
-task TaskH(TaskA):
+task TaskH:
+    class : redbreast.core.spec.EndTask
 end
 
 
@@ -35,6 +39,8 @@ process TestWorkflow:
     key : value
     
     tasks:
+        TaskStart as start1
+        TaskStart as start2
         TaskA as A
         TaskB as B
         TaskC as C
@@ -46,8 +52,9 @@ process TestWorkflow:
     end
     
     flows:
-        A->B->C->G->H
+        start1->A->B->C->G->H
         A->D->E->F->G
+        start2->A
     end
     
     code A.ready:
