add command for convert spec file to database WIP

--- a/redbreast/middleware/settings.ini
+++ b/redbreast/middleware/settings.ini
@@ -1,1 +1,5 @@
 [MODELS]
+workflow = 'redbreast.middleware.models.Workflow'
+workflow_task = 'redbreast.middleware.models.Workflow_Task'
+workflow_trans = 'redbreast.middleware.models.Workflow_Trans'
+
