update command tool

--- a/redbreast/core/settings.ini
+++ b/redbreast/core/settings.ini
@@ -1,3 +1,8 @@
+
+[GLOBAL]
+SPEC_SUFFIX = '.spec'
+SPEC_DIR = 'workflow_specs'
+
 [MODELS]
 workflow_spec = 'redbreast.core.models.Workflow_Spec'
 task_spec = 'redbreast.core.models.Task_Spec'
