add task_spec overwrite setting

--- a/redbreast/core/settings.ini
+++ b/redbreast/core/settings.ini
@@ -3,6 +3,16 @@
 SPEC_SUFFIX = '.spec'
 SPEC_DIR = 'workflow_specs'
 
+[BINDS]
+redbreast.after_init_apps = 'after_init_apps', 'redbreast.core.after_init_apps'
+
 [MODELS]
 workflow_spec = 'redbreast.core.models.Workflow_Spec'
 task_spec = 'redbreast.core.models.Task_Spec'
+
+[SPECS]
+simple_task = 'redbreast.core.spec.SimpleTask'
+join_task = 'redbreast.core.spec.JoinTask'
+choice_task = 'redbreast.core.spec.ChoiceTask'
+split_task = 'redbreast.core.spec.SplitTask'
+multichocie_task = 'redbreast.core.spec.MultiChoiceTask'
