--- a/redbreast/middleware/settings.ini
+++ b/redbreast/middleware/settings.ini
@@ -3,3 +3,5 @@ workflow = 'redbreast.middleware.models.Workflow'
 workflow_task = 'redbreast.middleware.models.Workflow_Task'
 workflow_trans = 'redbreast.middleware.models.Workflow_Trans'
 
+[SPECS]
+simple_task = 'redbreast.middleware.spec.SimpleTaskDB'
