--- a/redbreast/middleware/settings.ini
+++ b/redbreast/middleware/settings.ini
@@ -5,3 +5,8 @@ workflow_trans = 'redbreast.middleware.models.Workflow_Trans'
 
 [SPECS]
 simple_task = 'redbreast.middleware.spec.SimpleTaskDB'
+join_task = 'redbreast.middleware.spec.JoinTaskDB'
+choice_task = 'redbreast.middleware.spec.ChoiceTaskDB'
+split_task = 'redbreast.middleware.spec.SplitTaskDB'
+multichocie_task = 'redbreast.middleware.spec.MultiChoiceTaskDB'
+
