support database serialization for task and workflow

--- a/redbreast/middleware/settings.ini
+++ b/redbreast/middleware/settings.ini
@@ -3,10 +3,8 @@ workflow = 'redbreast.middleware.models.Workflow'
 workflow_task = 'redbreast.middleware.models.Workflow_Task'
 workflow_trans = 'redbreast.middleware.models.Workflow_Trans'
 
-[SPECS]
-simple_task = 'redbreast.middleware.spec.SimpleTaskDB'
-join_task = 'redbreast.middleware.spec.JoinTaskDB'
-choice_task = 'redbreast.middleware.spec.ChoiceTaskDB'
-split_task = 'redbreast.middleware.spec.SplitTaskDB'
-multichocie_task = 'redbreast.middleware.spec.MultiChoiceTaskDB'
+[PARA]
+WF_STATUS = [(1, 'CREATED'), (2, 'RUNNING'), (4, 'FINISHED')]
+WF_TASK_STATUS = [(1, 'WAITING'), (2, 'READY'), (4, 'EXECUTING'), (8, 'EXECUTED'), (16, 'COMPLETED')]
+
 
