--- a/test/test_project/apps/settings.ini
+++ b/test/test_project/apps/settings.ini
@@ -3,7 +3,7 @@ DEBUG = False
 DEBUG_CONSOLE = False
 
 INSTALLED_APPS = [
-    # ------------------------------------------
+    # -- uliweb ------------------------------------
     'uliweb.contrib.auth',
     'uliweb.contrib.staticfiles',
     'uliweb.contrib.orm',
@@ -14,10 +14,16 @@ INSTALLED_APPS = [
     'uliweb.contrib.generic',
     'uliweb.contrib.flashmessage',
     'uliweb.contrib.upload',
-    # ------------------------------------------
-
+    # -- redbreast ---------------------------------
     'redbreast.core',
     'redbreast.middleware',
     'redbreast.ui',
     'redbreast.daemon',
+    # -- apps --------------------------------------
+    'testapp',
+    'specapp',
     ]
+    
+[ORM]
+NULLABLE = True
+    
