--- a/examples/Demo/apps/settings.ini
+++ b/examples/Demo/apps/settings.ini
@@ -3,6 +3,7 @@ DEBUG = False
 DEBUG_CONSOLE = False
 
 INSTALLED_APPS = [
+    #------ uliweb -----------------------
     'uliweb.contrib.staticfiles',
     'uliweb.contrib.template',
     'uliweb.contrib.upload',
@@ -13,6 +14,8 @@ INSTALLED_APPS = [
     'uliweb.contrib.i18n',
     'uliweb.contrib.rbac',
     'uliweb.contrib.flashmessage',
+    'uliweb.contrib.generic',
+    #------ plugs -----------------------
     'plugs.user_admin',
     'plugs.layout.default',
     'plugs.layout.bootstrap',
@@ -20,11 +23,17 @@ INSTALLED_APPS = [
     'plugs.rbac_man',
     'plugs.messages',
     'plugs.menus',
-    'uliweb.contrib.generic',
     'plugs.ui.bootheme',
+    #------ redbreast -----------------------
+    'redbreast.core',
+    'redbreast.middleware',
+    'redbreast.ui',
+    'redbreast.daemon',
+    #------ demo -----------------------
     'dashboard',
     'admin',
-    ]
+    'approve'
+]
     
 [UI_CONFIG]
 bootstrap_version = '2.1.1'
@@ -42,5 +51,5 @@ MAIN = {'subs':[
 }
 
 [I18N]
-LOCALE_DIRS = ['${plugs}']
+LOCALE_DIRS = ['$[plugs]']
 SUPPORT_LANGUAGES = ['en', 'zh_CN']
