--- a/examples/Demo/apps/settings.ini
+++ b/examples/Demo/apps/settings.ini
@@ -16,14 +16,14 @@ INSTALLED_APPS = [
     'uliweb.contrib.flashmessage',
     'uliweb.contrib.generic',
     #------ plugs -----------------------
-    'plugs.user_admin',
     'plugs.layout.default',
     'plugs.layout.bootstrap',
     'plugs.ui.jquery.poshytip',
-    'plugs.rbac_man',
     'plugs.messages',
     'plugs.menus',
     'plugs.ui.bootheme',
+    'plugs.user_admin',
+    'plugs.rbac_man',
     #------ redbreast -----------------------
     'redbreast.core',
     'redbreast.middleware',
@@ -41,10 +41,11 @@ bootstrap_version = '2.1.1'
 [LAYOUT]
 TITLE = _('Red Breast Demo')
 PROJECT = _('Red Breast')
-COPYRIGHT = 'Flpm'
+COPYRIGHT = 'FLPM Team'
 
 [MENUS]
-MAIN = {'subs':[
+MAIN = {    
+    'subs':[
         {'name':'home', 'title':_('Home'), 'link':'/'},
         {'name':'admin', 'title':_('Admin'), 'link':'/user/view'},
     ]
