--- a/examples/Demo/apps/settings.ini
+++ b/examples/Demo/apps/settings.ini
@@ -29,6 +29,7 @@ INSTALLED_APPS = [
     'redbreast.middleware',
     'redbreast.ui',
     'redbreast.daemon',
+    'redbreast.moniter',
     #------ demo -----------------------
     'dashboard',
     'admin',
@@ -46,8 +47,9 @@ COPYRIGHT = 'FLPM Team'
 [MENUS]
 MAIN = {    
     'subs':[
-        {'name':'home', 'title':_('Home'), 'link':'/'},
-        {'name':'admin', 'title':_('Admin'), 'link':'/user/view'},
+        {'name':'home', 'title':'首页', 'link':'/'},
+        {'name':'admin', 'title':'管理', 'link':'/user/view'},
+        {'name':'redbreast', 'title':'监控', 'link':'/redbreast', 'roles':['superuser']},
     ]
 }
 
