update demo to add test data

--- a/examples/Demo/apps/approve/settings.ini
+++ b/examples/Demo/apps/approve/settings.ini
@@ -1,6 +1,3 @@
-
-
-
 [MODELS]
 approve = 'approve.models.Approve'
 
@@ -21,15 +18,16 @@ wf_manager  = '分管领导审批', '', False
 wf_boss     = '大领导直接审批', '', False
 wf_checker  = '结果审核', '', False
 wf_archiver = '归档', '', False
+wf_all      = '审批流程全功能', '', False
 
 [ROLES_PERMISSIONS]
-ApproveCreate  = ['wf_create']
-ApproveGroup   = ['wf_group']
-ApproveDepart  = ['wf_depart']
-ApproveManager = ['wf_manager']
-ApproveBoss    = ['wf_boss']
-ApproveChecker = ['wf_checker']
-ApproveArchiver= ['wf_archiver']
+ApproveCreate  = ['wf_create'  , 'wf_all']
+ApproveGroup   = ['wf_group'   , 'wf_all']
+ApproveDepart  = ['wf_depart'  , 'wf_all']
+ApproveManager = ['wf_manager' , 'wf_all']
+ApproveBoss    = ['wf_boss'    , 'wf_all']
+ApproveChecker = ['wf_checker' , 'wf_all']
+ApproveArchiver= ['wf_archiver', 'wf_all']
 
 
 
