--- a/examples/Demo/apps/settings.ini
+++ b/examples/Demo/apps/settings.ini
@@ -33,9 +33,10 @@ INSTALLED_APPS = [
     #------ demo -----------------------
     'dashboard',
     'admin',
-    'approve'
+    'approve',
+    'test',
 ]
-    
+
 [UI_CONFIG]
 bootstrap_version = '2.1.1'
 
@@ -45,7 +46,7 @@ PROJECT = _('Red Breast')
 COPYRIGHT = 'FLPM Team'
 
 [MENUS]
-MAIN = {    
+MAIN = {
     'subs':[
         {'name':'home', 'title':'首页', 'link':'/'},
         {'name':'admin', 'title':'管理', 'link':'/user/view'},
