--- a/examples/Demo/apps/approve/settings.ini
+++ b/examples/Demo/apps/approve/settings.ini
@@ -2,13 +2,13 @@
 approve = 'approve.models.Approve'
 
 [PERMISSIONS]
-ApproveCreate   = '创建审批流程'
-ApproveGroup    = '小组内部预审'
-ApproveDepart   = '部门管理员审批'
-ApproveManager  = '分管领导审批'
-ApproveBoss     = '大领导直接审批'
-ApproveChecker  = '结果审核'
-ApproveArchiver = '归档'
+ApproveWorkflowCreate   = '创建审批流程'
+ApproveWorkflowGroup    = '小组内部预审'
+ApproveWorkflowDepart   = '部门管理员审批'
+ApproveWorkflowManager  = '分管领导审批'
+ApproveWorkflowBoss     = '大领导直接审批'
+ApproveWorkflowChecker  = '结果审核'
+ApproveWorkflowArchiver = '归档'
 
 [ROLES]
 wf_create   = '创建审批流程', '', False
@@ -21,13 +21,31 @@ wf_archiver = '归档', '', False
 wf_all      = '审批流程全功能', '', False
 
 [ROLES_PERMISSIONS]
-ApproveCreate  = ['wf_create'  , 'wf_all']
-ApproveGroup   = ['wf_group'   , 'wf_all']
-ApproveDepart  = ['wf_depart'  , 'wf_all']
-ApproveManager = ['wf_manager' , 'wf_all']
-ApproveBoss    = ['wf_boss'    , 'wf_all']
-ApproveChecker = ['wf_checker' , 'wf_all']
-ApproveArchiver= ['wf_archiver', 'wf_all']
+ApproveWorkflowCreate  = ['wf_create'  , 'wf_all']
+ApproveWorkflowGroup   = ['wf_group'   , 'wf_all']
+ApproveWorkflowDepart  = ['wf_depart'  , 'wf_all']
+ApproveWorkflowManager = ['wf_manager' , 'wf_all']
+ApproveWorkflowBoss    = ['wf_boss'    , 'wf_all']
+ApproveWorkflowChecker = ['wf_checker' , 'wf_all']
+ApproveWorkflowArchiver= ['wf_archiver', 'wf_all']
+
+[WORKFLOW]
+#活动节点和权限对照表
+TASK_PERMISSION_MAP = {
+    'ApproveWorkflow.Create'  : ['ApproveWorkflowCreate'  ],
+    'ApproveWorkflow.Group'   : ['ApproveWorkflowGroup'   ],
+    'ApproveWorkflow.Depart'  : ['ApproveWorkflowDepart'  ],
+    'ApproveWorkflow.Manger'  : ['ApproveWorkflowManager' ],
+    'ApproveWorkflow.Boss'    : ['ApproveWorkflowBoss'    ],
+    'ApproveWorkflow.Checker' : ['ApproveWorkflowChecker' ],
+    'ApproveWorkflow.Archiver': ['ApproveWorkflowArchiver'],
+}
+
+[PARA]
+#i18n
+WF_STATUS = [(1, '新建立'), (2, '活动中'), (4, '已完成')]
+WF_TASK_STATUS = [(1, '活动中'), (2, '流转中'), (4, '执行中'), (8, '已执行'), (16, '已完成')]
+
 
 
 
