--- a/examples/Demo/apps/approve/settings.ini
+++ b/examples/Demo/apps/approve/settings.ini
@@ -35,7 +35,7 @@ TASK_PERMISSION_MAP = {
     'ApproveWorkflow.Create'  : ['ApproveWorkflowCreate'  ],
     'ApproveWorkflow.Group'   : ['ApproveWorkflowGroup'   ],
     'ApproveWorkflow.Depart'  : ['ApproveWorkflowDepart'  ],
-    'ApproveWorkflow.Manger'  : ['ApproveWorkflowManager' ],
+    'ApproveWorkflow.Manager' : ['ApproveWorkflowManager' ],
     'ApproveWorkflow.Boss'    : ['ApproveWorkflowBoss'    ],
     'ApproveWorkflow.Checker' : ['ApproveWorkflowChecker' ],
     'ApproveWorkflow.Archiver': ['ApproveWorkflowArchiver'],
