--- a/redbreast/middleware/settings.ini
+++ b/redbreast/middleware/settings.ini
@@ -6,5 +6,6 @@ workflow_trans = 'redbreast.middleware.models.Workflow_Trans'
 [PARA]
 WF_STATUS = [(1, 'CREATED'), (2, 'RUNNING'), (4, 'FINISHED')]
 WF_TASK_STATUS = [(1, 'ACTIVE'), (2, 'READY'), (4, 'EXECUTING'), (8, 'EXECUTED'), (16, 'COMPLETED')]
+WF_TRANS_TYPE = [(1, 'CREATE'), (2, 'DELIVER'), (3, 'ARCHIVE')]
 
 
