--- a/examples/Demo/apps/approve/settings.ini
+++ b/examples/Demo/apps/approve/settings.ini
@@ -21,13 +21,13 @@ wf_archiver = '归档', '', False
 wf_all      = '审批流程全功能', '', False
 
 [ROLES_PERMISSIONS]
-ApproveWorkflowCreate  = ['wf_create'  , 'wf_all']
-ApproveWorkflowGroup   = ['wf_group'   , 'wf_all']
-ApproveWorkflowDepart  = ['wf_depart'  , 'wf_all']
-ApproveWorkflowManager = ['wf_manager' , 'wf_all']
-ApproveWorkflowBoss    = ['wf_boss'    , 'wf_all']
-ApproveWorkflowChecker = ['wf_checker' , 'wf_all']
-ApproveWorkflowArchiver= ['wf_archiver', 'wf_all']
+ApproveWorkflowCreate   = ['wf_create'  , 'wf_all']
+ApproveWorkflowGroup    = ['wf_group'   , 'wf_all']
+ApproveWorkflowDepart   = ['wf_depart'  , 'wf_all']
+ApproveWorkflowManager  = ['wf_manager' , 'wf_all']
+ApproveWorkflowBoss     = ['wf_boss'    , 'wf_all']
+ApproveWorkflowChecker  = ['wf_checker' , 'wf_all']
+ApproveWorkflowArchiver = ['wf_archiver', 'wf_all']
 
 [WORKFLOW]
 #活动节点和权限对照表
