add event_bind for workflow_spec

--- a/redbreast/middleware/settings.ini
+++ b/redbreast/middleware/settings.ini
@@ -8,4 +8,12 @@ WF_STATUS = [(1, 'CREATED'), (2, 'RUNNING'), (4, 'FINISHED')]
 WF_TASK_STATUS = [(1, 'ACTIVE'), (2, 'READY'), (4, 'EXECUTING'), (8, 'EXECUTED'), (16, 'COMPLETED')]
 WF_TRANS_TYPE = [(1, 'CREATE'), (2, 'DELIVER'), (3, 'ARCHIVE')]
 
+[BINDS]
+middleware.after_init_apps = 'after_init_apps', 'redbreast.middleware.after_init_apps'
 
+[REDBREAST]
+Event_Bind = True
+
+[REDBREAST_BINDS]
+# Format
+# bind_name = 'spec_name', 'event_type_name', 'func'
