update demo to filter records based on user's permissions.

--- a/examples/Demo/apps/approve/settings.ini
+++ b/examples/Demo/apps/approve/settings.ini
@@ -46,6 +46,10 @@ TASK_PERMISSION_MAP = {
 WF_STATUS = [(1, '新建立'), (2, '活动中'), (4, '已完成')]
 WF_TASK_STATUS = [(1, '活动中'), (2, '流转中'), (4, '执行中'), (8, '已执行'), (16, '已完成')]
 
+[REDBREAST_BINDS]
+approve_task_enter  = 'ApproveWorkflow', 'task:enter', 'approve.workflow_task_enter'
+approve_wf_running  = 'ApproveWorkflow', 'workflow:running', 'approve.workflow_running'
+approve_wf_finished = 'ApproveWorkflow', 'workflow:finished', 'approve.workflow_finished'
 
 
 
