--- a/examples/Demo/apps/dashboard/settings.ini
+++ b/examples/Demo/apps/dashboard/settings.ini
@@ -1,3 +1,4 @@
-[BINDS]
-dashboard.after_init_apps = 'after_init_apps', 'dashboard.after_init_apps'
 
+
+[REDBREAST_BINDS]
+log_every_event = '*', '*', 'dashboard.workflow_log_handler'
