update spec format and change some function names

--- a/redbreast/core/settings.ini
+++ b/redbreast/core/settings.ini
@@ -16,3 +16,9 @@ join_task        = 'redbreast.core.spec.JoinTask'
 choice_task      = 'redbreast.core.spec.ChoiceTask'
 split_task       = 'redbreast.core.spec.SplitTask'
 multichocie_task = 'redbreast.core.spec.MultiChoiceTask'
+
+auto_simple_task      = 'redbreast.core.spec.AutoSimpleTask'
+auto_join_task        = 'redbreast.core.spec.AutoJoinTask'
+auto_choice_task      = 'redbreast.core.spec.AutoChoiceTask'
+auto_split_task       = 'redbreast.core.spec.AutoSplitTask'
+auto_multichoice_task = 'redbreast.core.spec.AutoMultiChoiceTask'
