add role setting for visit monitor module

--- a/redbreast/middleware/settings.ini
+++ b/redbreast/middleware/settings.ini
@@ -12,7 +12,7 @@ WF_TRANS_TYPE = [(1, 'CREATE'), (2, 'DELIVER'), (3, 'ARCHIVE')]
 middleware.after_init_apps = 'after_init_apps', 'redbreast.middleware.after_init_apps'
 
 [REDBREAST]
-Event_Bind = True
+ENABLE_EVENT_BIND = True
 
 [REDBREAST_BINDS]
 # Format
