change package name from middleware to serializable, add functions.get_workflow

--- a/redbreast/core/settings.ini
+++ b/redbreast/core/settings.ini
@@ -22,3 +22,15 @@ auto_join_task        = 'redbreast.core.spec.AutoJoinTask'
 auto_choice_task      = 'redbreast.core.spec.AutoChoiceTask'
 auto_split_task       = 'redbreast.core.spec.AutoSplitTask'
 auto_multichoice_task = 'redbreast.core.spec.AutoMultiChoiceTask'
+
+[INSTANCES]
+workflow = 'redbreast.core.Workflow'
+task = 'redbreast.core.Task'
+core_workflow = 'redbreast.core.Workflow'
+core_task = 'redbreast.core.Workflow'
+
+[FUNCTIONS]
+get_redbreast_workflow = 'redbreast.core.get_workflow'
+get_redbreast_task = 'redbreast.core.get_task'
+get_workflow = 'redbreast.core.get_workflow'
+get_task = 'redbreast.core.get_task'
