--- a/test/test_project/apps/settings.ini
+++ b/test/test_project/apps/settings.ini
@@ -16,7 +16,7 @@ INSTALLED_APPS = [
     'uliweb.contrib.upload',
     # -- redbreast ---------------------------------
     'redbreast.core',
-    'redbreast.middleware',
+    'redbreast.serializable',
     'redbreast.ui',
     'redbreast.daemon',
     # -- apps --------------------------------------
