add test script for pymysql

--- a/test/performance/test_project/apps/settings.ini
+++ b/test/performance/test_project/apps/settings.ini
@@ -25,4 +25,6 @@ INSTALLED_APPS = [
     
 [ORM]
 NULLABLE = True
+CONNECTION = 'mysql+pymysql://root:111@localhost/redbreasttestdb?charset=utf8'
+CONNECTION_ARGS = {'pool_recycle':10, 'pool_size': 5, 'max_overflow': 0,  'echo_pool':True}
     
