--- a/test/test_project/apps/settings.ini
+++ b/test/test_project/apps/settings.ini
@@ -26,4 +26,9 @@ INSTALLED_APPS = [
     
 [ORM]
 NULLABLE = True
+CONNECTION = 'mysql+pymysql://root:111@localhost/redbreastdemo?charset=utf8'
+CONNECTION_TYPE = 'short'
+
+
+
     
